--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header a:hover{
     padding: 0 0 0 0;
 }
 .fa fa-linkedin,.fab fa-github{
-    color: black;
+    color: #1B0A2A;;
     margin-top: 10px;
 }
 .present{
