--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ header a:hover{
 /* block bootcamp*/
 h2{
     margin: auto;
-    padding: 20px;
+    padding: 10px,10px,10px,10px;
 }
 .motivs{
     display:flex;
